[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pypendency/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
name = pypendency
version = 0.1.0
author = Marvin Taschenberger
author_email = marvin.taschenberger@gmail.com
description = A dpenedency parser and manifestation tool
long_description = file: README.md
long_description_content_type = text/restructuredtext
url = https://github.com/taschenbergerm/pypendency
project_urls =
    Bug Tracker = https://github.com/taschenbergerm/pypendency/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache2 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = pypendency
